# grafika3

./: CMakeLists.txt
Programs/Skeleton/Skeleton/: Skeleton.cpp
Programs/Skeleton/Skeleton/Release/Skeleton.tlog/: Skeleton.lastbuildstate
